# htmxlistviewdemo

./: README.md  db.sqlite3  manage.py  pyproject.toml
HTMXListViewDemo/: asgi.py  settings.py  types.py  urls.py  utils.py  views.py  wsgi.py
hr_app/: models.py  urls.py  views.py
hr_app/management/commands/: populate_db.py
hr_app/migrations/: 0001_initial.py
hr_app/templates/: index.html
hr_app/templates/partials/: _person_list.html
templates/: base.html
templates/cotton/icons/: chevron_down.html  chevron_left.html  chevron_right.html  chevron_up.html
templates/cotton/tables/: head.html  header_cell.html  pager.html
