[project]
name = "htmxlistviewdemo"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Davis",email = "binary.god@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "django-cotton (>=2.1.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

